# factory

./: .pre-commit-config.yaml  CC12.py  LICENSE  README.md  anomalous_peaks.py  callbacks.py  data_loader.py  distributions.py  encoder.py  loss_functionality.py  model.py  networks.py  pyproject.toml  rasu.py  rcsb_pdb_9B7C.fasta  run_data_loader.py  setup.py  simplest_encode.py  tox.ini  wrap_folded_normal.py
configs/: config_example.yaml
docs/: Makefile  conf.py  convert_favicon.py  index.md  index.rst  installation.rst  usage.rst
docs/_templates/: layout.html
docs/api/: index.rst
src/factory/: CC12.py  __init__.py  _mtz_to_data_frame.py  anomalous_peaks.py  callbacks.py  data_loader.py  distributions.py  encoder.py  generate_eff.py  get_protein_data.py  import gemmi.py  inspect_background.py  inspect_scale.py  loss_function.py  loss_functionality.py  metadata_encoder.py  model.py  networks.py  parse_yaml.py  phenix_callback.py  plot_peaks.py  positional_encoding.py  rasu.py  run_data_loader.py  run_factory.py  run_phenix_from_model.py  run_reference_processing.py  settings.py  shoebox_encoder.py  simple_encoder.py  simplest_encode.py  test_callbacks.py  test_dataloader.py  unmerged_mtz.py  wrap_folded_normal.py
tests/: test_distributions.py
