[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "factory"
version = "0.1.0"
description = "A factory for crystallographic data processing"
readme = "README.md"
requires-python = ">=3.8"
license = "MIT"
authors = [
    { name = "Your Name", email = "your.email@example.com" }
]
dependencies = [
    "torch",
    "numpy",
    "gemmi",
    "pandas",
    "pytorch-lightning",
]

[project.optional-dependencies]
test = [
    "pytest",
    "pytest-cov",
]
docs = [
    "sphinx",
    "sphinx-rtd-theme",
    "myst-parser",
]

[tool.hatch.version]
source = "git"

[tool.hatch.build.targets.wheel]
packages = ["src/factory"] 