[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "factory"
version = "0.1.0"
description = "A unified Bayesian deep-learning model that infers X-ray structure factor amplitudes directly from diffraction images."
readme = "README.md"
requires-python = ">=3.9"
license = "MIT"
authors = [
    { name = "Flavia Giehr" },
]
keywords = [
    "crystallography",
    "structure-factors",
    "variational-inference",
    "bayesian-deep-learning",
    "pytorch",
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Physics",
    "Development Status :: 3 - Alpha",
]
dependencies = [
    "torch",
    "torchvision",
    "lightning>=2.0",
    "numpy",
    "pandas",
    "scipy",
    "matplotlib",
    "pillow",
    "requests",
    "pyyaml",
    "omegaconf",
    "tensordict",
    "wandb",
    "gemmi",
    "biopython",
    "adabelief-pytorch",
    "reciprocalspaceship",
    "rs-distributions",
]

[project.optional-dependencies]
test = [
    "pytest",
    "pytest-cov",
]
docs = [
    "sphinx",
    "sphinx-rtd-theme",
    "myst-parser",
]

[project.urls]
Repository = "https://github.com/rs-station/factory"

[tool.hatch.build.targets.wheel]
packages = ["src/factory"]
